[project]
name = "nlp_assignment_2"
version = "0.1.0"
description = "pyproject.toml file for NLP assignment 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.3",
    "pandas>=3.0.0",
    "pyqt6>=6.10.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]